Closed
Bug 989708
Opened 11 years ago
Closed 11 years ago
CanvasRenderingContext2D.cpp:2428:8: error: variable ‘isDescendant’ set but not used [-Werror=unused-but-set-variable]
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: dholbert, Assigned: Cykesiopka)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
1.09 KB,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
GCC 4.8 build warning in --disable-accessibility builds, treated as error if you build with --enable-warnings-as-errors:
{
content/canvas/src/CanvasRenderingContext2D.cpp:2428:8: error: variable ‘isDescendant’ set but not used [-Werror=unused-but-set-variable]
}
This variable was added in
http://hg.mozilla.org/mozilla-central/rev/fc089133d229
for bug 966591, and then its usages were #ifdef-guarded in a followup (which I pushed, because they fixed my compile issues at the time per bug 966591 comment 106). Not sure if something changed between then and now, or if I simply wasn't using GCC 4.8 at that time, but in any case, I'm hitting this issue now with GCC 4.8.
Reporter | ||
Comment 1•11 years ago
|
||
(For the record, the #ifdef guarding followup was
https://hg.mozilla.org/integration/mozilla-inbound/rev/5d9a2c52728a
)
![]() |
Assignee | |
Comment 2•11 years ago
|
||
This fixes --disable-accessibility builds for me (GCC 4.8).
Attachment #8420582 -
Flags: review?(vladimir)
Attachment #8420582 -
Flags: review?(vladimir) → review+
![]() |
Assignee | |
Updated•11 years ago
|
Assignee: nobody → cykesiopka.bmo
Keywords: checkin-needed
Reporter | ||
Comment 3•11 years ago
|
||
Thanks for the patch! I tweaked the commit message to add reviewer (and to make it a little more specific), and landed: https://hg.mozilla.org/integration/mozilla-inbound/rev/ab80c7351c88
Flags: in-testsuite-
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in
before you can comment on or make changes to this bug.
Description
•