Bug 989708 - Add #ifdef guards to fix Wunused-but-set-variable build warning in non-a11y builds. r=vlad