content/canvas/src/CanvasRenderingContext2D.cpp
@@ -2459,12 +2459,14 @@ CanvasRenderingContext2D::AddHitRegion(const HitRegionOptions& options, ErrorRes
     return;
   }
 
+#ifdef ACCESSIBILITY
   // check if the control is a descendant of our canvas
   HTMLCanvasElement* canvas = GetCanvas();
   bool isDescendant = true;
   if (!canvas || !nsContentUtils::ContentIsDescendantOf(options.mControl, canvas)) {
     isDescendant = false;
   }
+#endif
 
   // check if the path is valid
   EnsureUserSpacePath(CanvasWindingRule::Nonzero);
